Add user name to config details
